--- a/floof_appreciation_club_v02.html
+++ b/floof_appreciation_club_v02.html
@@ -9,7 +9,10 @@
 	<body>
 	
 	<button id="testbutton" type="button" onclick="doJSON()">Fetch JSON</button>
-	<button id="testbutton" type="button" onclick="printJSON()">Print JSON</button>
+	<button id="testbutton" type="button" onclick="printJSON()">Log Array Length</button>
+	<button id="testbutton" type="button" onclick="printHeaders()">Print Headers</button>
+	
+	<p id =showFoxes>Table goes here</p>
 	
 	</body>
 
