--- a/floof_appreciation_club_v02.html
+++ b/floof_appreciation_club_v02.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 	<head>
-	<script src="scripts/javascript.js"></script>
+		<script src="scripts/javascript.js"></script>
+		<link rel="stylesheet" href="scripts/style.css" />
 	</head>
 	
 	
