--- a/floof_appreciation_club_v02.html
+++ b/floof_appreciation_club_v02.html
@@ -2,42 +2,70 @@
 <html lang="en">
 
 	<head>
-	<script src="scripts/javascript.js"></script>
+		<script src="scripts/javascript.js"></script>
+		<link rel="stylesheet" href="scripts/style.css" />
 	</head>
 	
 	
 	<body>
 	
-	<button id="testbutton" type="button" onclick="doJSON()">Fetch JSON</button>
-	<button id="testbutton" type="button" onclick="printJSON()">Log Array Length</button>
-	<button id="testbutton" type="button" onclick="printHeaders()">Print Headers</button>
 	
-	<p id =showFoxes>Table goes here</p>
-	<br>
+	
+		<div class="title-wrapper">
+			<div class="title-background"></div>
+			<h1 class="title">
+			Floof Appreciation Club
+			</h1>
+		</div>
+			
+		<div class="tilt">
+			<div id="status" class="pop">Now&nbsp;Data-driven!
+			</div>
+			
+			
+		</div>
+
+		<div class="button-wrapper">
+			<button id="testbutton" type="button" onclick="doJSON()">Fetch JSON</button>
+			<button id="testbutton" type="button" onclick="printJSON()">Log Array Length</button>
+			<button id="testbutton" type="button" onclick="printHeaders()">Print Headers</button>
+		</div>
+	
+	
+	
+	
+		<section>
+		SECTION <p id =showFoxes>Table goes here</p>
+		</section>
+	
+	
+	
+		<footer>
+			Floof Appreciation Club v0.2
+		</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
 	
 	</body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
