--- a/floof_appreciation_club_v02.html
+++ b/floof_appreciation_club_v02.html
@@ -26,15 +26,13 @@
 		</div>
 
 		<div class="button-wrapper">
-			<button id="testbutton" type="button" onclick="doJSON()">Fetch JSON</button>
-			<button id="testbutton" type="button" onclick="printJSON()">Log Array Length</button>
-			<button id="testbutton" type="button" onclick="printHeaders()">Print Headers</button>
+			<button class="main-button" role="button" onclick="doJSON()"><span>See the Foxes</span><span>Love the Foxes</span></button>
 		</div>
 	
 	
 	
 	
-		<section>
+		<section id="table-section" class="fade">
 		SECTION <p id =showFoxes>Table goes here</p>
 		</section>
 	
